cmake_minimum_required(VERSION 3.16)
project(hello)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

add_subdirectory(lib/SDL EXCLUDE_FROM_ALL)

# Create your game executable target as usual
add_executable(RocketSoar main.cpp)

# Link to the actual SDL3 library.
target_link_libraries(RocketSoar PRIVATE SDL3::SDL3)

